--- a/client/app/index.html
+++ b/client/app/index.html
@@ -1,137 +1,121 @@
-<!doctype html>
+
+<!DOCTYPE html>
 <html ng-app="urlShortener">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Url-Shortener</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width">
-    <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
-    <!-- build:css(.) styles/vendor.css -->
-    <!-- bower:css -->
-    <!-- endbower -->
-    <!-- endbuild -->
-    <!-- build:css(.tmp) styles/main.css -->
-    <link rel="stylesheet" href="styles/main.css">
-    <!-- endbuild -->
-	
-	<!--Set up and load controllers -->
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<script src="../bower_components/angular/angular.js"></script>
-	<script src="scripts/controllers/shortenCtrl.js"></script>
-  </head>
-  
-  <body>
-	<!-- Intro -->
-    <div>
+    <meta name="description" content="">
+    <meta name="author" content="">
 
-    <h1 class="title">ME.TO
-      <span class="subtitle">Url-Shortner: Simple, Smart, Lightweight</span>
-    </h1>
+    <title>squiz.it</title>
+    <!--Set up and load controllers -->
 
-    <!-- Auth -->
-    <div ng-controller="authCtrl">
-      <form class="authForm">
-        <table>
-          <tr>
-            <td>
-              Email
-            </td>
-            <td>
-              <input type="emailInput" ng-model="email">
-            </td>
-          </tr>
-          <tr>
-            <td>
-              Password
-            </td>
-            <td>
-              <input type="passwordInput" ng-model="password">
-            </td>
-          </tr>
-          <tr>
-            <td>
-              <input type="submit" ng-click="login(email, password)" value="Login" />
-            </td>
-            <td>
-              <input type="submit" ng-click="singin(email, password)" value="Singup" />
-            </td>
-          </tr>
-        </table>
-      </form>
-    </div>
+    <script src="../bower_components/angular/angular.js"></script>
+    <script src="scripts/controllers/shortenCtrl.js"></script>
 
-    </div>
+    <!-- Bootstrap core CSS -->
+    <link href="styles/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Custom styles for this template -->
+    <link href="styles/bootstrap/jumbotron.css" rel="stylesheet">
+    <!-- Other normal CSS styles -->
+    <link href="styles/imageStyle.css" rel="stylesheet">
 
+</head>
 
-    <!--BUTTONS -->
-	<div>
-	   <table class="headerTable">
-	      <tr>
-		     <td>
-			    <button type="button" class="headerButton">WHO WE ARE</button>
-			 </td>
-			 <td>
-			    <button type="button" class="headerButton">WHAT WE DO</button>
-			 </td>
-			 <td>
-			    <button type="button" class="headerButton">CONTACT</button>
-			 </td>
-		  </tr>
-	   </table>
-	</div>
+<body>
 
-    <!-- Shortening -->
-    <br>
-    <div ng-controller="shortenCtrl">
-      <div class="shortForm">
-        <form name="urlInputForm">
-        <span>Url here: </span>
-        <input type="longUrlInput" ng-model="longUrl"><br>
-        <input type="submit" ng-click="shortening(longUrl)" value="Les't shorten it!" />
-      </form>
-        <p>{{errorMsg}}</p>
-      </div>
-    </div>
-
-	<!-- Footer -->
+<nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
-    <div ng-view=""></div>
+        <div class="navbar-header">
+            <a class="navbar-brand" href="#">squiz.it</a>
+        </div>
+
+        <div ng-controller="authCtrl">
+        <div id="navbar" class="navbar-collapse collapse">
+            <form class="navbar-form navbar-right">
+                <div class="form-group">
+                    <input type="text" placeholder="Email" class="form-control" ng-model="email">
+                </div>
+                <div class="form-group">
+                    <input type="password" placeholder="Password" class="form-control" ng-model="password">
+                </div>
+                <button type="submit" class="btn btn-success" ng-click="login(email, password)">Sign in</button>
+                <button type="submit" class="btn btn-success">Sing up</button>
+            </form>
+        </div><!--/.navbar-collapse -->
+        </div>
+    </div>
+</nav>
+
+<!-- Main jumbotron for a primary marketing message or call to action -->
+<div class="jumbotron">
+    <div class="container">
+
+        <h1>
+            SQUIZ!
+            <span>
+                <h2>
+                    Url-Shortner: Simple, Smart, Lightweight
+                </h2>
+            </span>
+        </h1>
+
+        <div ng-controller="shortenCtrl">
+            <form>
+                <input type="text" placeholder="Insert you long url here..." class="form-control" ng-model="longUrl">
+                <span>
+                    <button type="submit" class="btn btn-primary btn-lg" ng-click="shortening()">Let's shorten it! &raquo;</button>
+                </span>
+            </form>
+            {{shortUrl}}
+        </div>
+    </div>
+</div>
+
+<h1 class="team">TEAM</h1>
+<div class="container">
+    <!-- Example row of columns -->
+    <div class="row">
+        <div class="col-md-4">
+            <h2>Giuseppe Lorusso</h2>
+            <img src="images/peppo.jpg" class="img-rounded profile">
+            <h4>Frontend Developer</h4>
+            <h4>Data Analyst</h4>
+            <p>Everybody calls him Peppo. So, Peppo is a bass player, football player and a juggler. He loves problem solving, music, beer and coffee. <br><br> <i>"We are a flash in time, but our impact is forever."</i></i></p>
+        </div>
+        <div class="col-md-4">
+            <h2>Donato Mastropasqua</h2>
+            <img src="images/donato.jpg" class="img-rounded profile" height="70%" width="70%">
+            <h4>Backend Developer</h4>
+            <h4>Software Engineer</h4>
+            <p>Coming soon...</p>
+        </div>
+        <div class="col-md-4">
+            <h2>Corrado Giancaspro</h2>
+            <img src="images/corrado.jpg" class="img-rounded profile" height="100%" width="100%">
+            <h4>Backend Developer</h4>
+            <h4>Data Engineer</h4>
+            <p>Coming soon...</p>
+        </div>
     </div>
 
-    <div class="footer">
-      <div class="container">
-        <p><span class="glyphicon glyphicon-heart"></span> Designing Data Bases with Advanced Data Models. University of Bari, CS.</p>
-      </div>
-    </div>
-	
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+    <hr>
 
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
+    <footer>
+        <p>&copy; SquizTeam 2015</p>
+    </footer>
+</div> <!-- /container -->
 
-    <!-- build:js(.) scripts/vendor.js -->
-    <!-- bower:js -->
-    <script src="bower_components/angular/angular.js"></script>
-    <script src="bower_components/angular-animate/angular-animate.js"></script>
-    <script src="bower_components/angular-cookies/angular-cookies.js"></script>
-    <script src="bower_components/angular-resource/angular-resource.js"></script>
-    <script src="bower_components/angular-route/angular-route.js"></script>
-    <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
-    <script src="bower_components/angular-touch/angular-touch.js"></script>
-    <!-- endbower -->
-    <!-- endbuild -->
 
-        <!-- build:js({.tmp,app}) scripts/scripts.js
-        <script src="scripts/app.js"></script>
-        <script src="scripts/controllers/main.js"></script>
-        <script src="scripts/controllers/about.js"></script>
-        endbuild -->
+<!-- Bootstrap core JavaScript
+================================================== -->
+<!-- Placed at the end of the document so the pages load faster -->
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
+<script src="../../dist/js/bootstrap.min.js"></script>
+<!-- IE10 viewport hack for Surface/desktop Windows 8 bug -->
+<script src="../../assets/js/ie10-viewport-bug-workaround.js"></script>
 </body>
 </html>
