--- a/client/app/index.html
+++ b/client/app/index.html
@@ -34,18 +34,18 @@
         </div>
 
         <div ng-controller="authCtrl">
-        <div id="navbar" class="navbar-collapse collapse">
-            <form class="navbar-form navbar-right">
-                <div class="form-group">
-                    <input type="text" placeholder="Email" class="form-control" ng-model="email">
-                </div>
-                <div class="form-group">
-                    <input type="password" placeholder="Password" class="form-control" ng-model="password">
-                </div>
-                <button type="submit" class="btn btn-success" ng-click="login(email, password)">Sign in</button>
-                <button type="submit" class="btn btn-success">Sing up</button>
-            </form>
-        </div><!--/.navbar-collapse -->
+            <div id="navbar" class="navbar-collapse collapse">
+                <form class="navbar-form navbar-right">
+                    <div class="form-group">
+                        <input type="text" placeholder="Username" class="form-control" ng-model="username">
+                    </div>
+                    <div class="form-group">
+                        <input type="password" placeholder="Password" class="form-control" ng-model="password">
+                    </div>
+                    <button type="submit" class="btn btn-success" ng-click="login(email, password)">Sign in</button>
+                    <button type="submit" class="btn btn-success" ng-click="singup()">Sing up</button>
+                </form>
+            </div><!--/.navbar-collapse -->
         </div>
     </div>
 </nav>
