--- a/client/app/index.html
+++ b/client/app/index.html
@@ -25,7 +25,7 @@
 
 </head>
 
-<body ng-controller="shortenCtrl">
+<body ng-controller="shortenCtrl" data-ng-init="init()">
 
 <nav class="navbar navbar-inverse navbar-fixed-top">
     <div class="container">
@@ -79,7 +79,6 @@
         </div>
     </div>
 </div>
-
 
 <h1 class="team">TEAM</h1>
 <div class="container">
