working continents stats

--- a/client/app/index.html
+++ b/client/app/index.html
@@ -11,16 +11,17 @@
     <meta name="author" content="">
 
     <title>squiz.it</title>
-    <!--Set up and load controllers -->
 
+    <!-- Script -->
     <script src="../bower_components/angular/angular.js"></script>
+    <script src="scripts/app.js"></script>
     <script src="scripts/controllers/shortenCtrl.js"></script>
+    <script src="scripts/chart/Chart.js"></script>
+    <script src="scripts/chart/angular-chart.js"></script>
 
-    <!-- Bootstrap core CSS -->
+    <!-- Styles -->
     <link href="styles/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
     <link href="styles/bootstrap/jumbotron.css" rel="stylesheet">
-    <!-- Other normal CSS styles -->
     <link href="styles/imageStyle.css" rel="stylesheet">
 
 </head>
