--- a/client/app/account.html
+++ b/client/app/account.html
@@ -7,23 +7,23 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.14/angular.min.js"></script>
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <script src="Chart.js"></script>
+
 
     <title>squiz.it</title>
     <!--Set up and load controllers -->
     <script src="../bower_components/angular/angular.js"></script>
+    <script src="scripts/app.js"></script>
     <script src="scripts/controllers/shortenCtrl.js"></script>
+    <script src="scripts/controllers/userCtrl.js"></script>
+    <script src="scripts/chart/Chart.js"></script>
+    <script src="scripts/chart/angular-chart.js"></script>
 
-
-    <!-- Bootstrap core CSS -->
+    <!-- Styles -->
     <link href="styles/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Custom styles for this template -->
     <link href="styles/bootstrap/jumbotron.css" rel="stylesheet">
-    <!-- Other normal CSS styles -->
     <link href="styles/imageStyle.css" rel="stylesheet">
-
-
+    <link rel="stylesheet" href="styles/angular-chart.css">
 </head>
 
 <body ng-controller="userCtrl" data-ng-init="accountInit()">
@@ -68,27 +68,14 @@
     </div>
 </div>
 
+<chart value="myChart"></chart>
+
 <!--STATISTICHE-->
 <div class="container">
     <h3 class="sub-header">GLOBAL STAT</h3>
     <ul>
         <li>Total shorteners: {{totalShorteners}}</li>
         <li>Total click: {{totalClick}}</li>
-    </ul>
-
-    <ul ng-repeat="continent in continentList">
-        <li>
-            {{continent.name}} : {{continent.click}}
-            <span>
-                <button type="submit" class="btn btn-success" ng-click="showCountryClick(shortUrl, continent)">view more</button>
-            </span>
-        </li>
-    </ul>
-
-    <ul ng-repeat="country in countryList">
-        <li>
-            {{country.name}} : {{country.click}}
-        </li>
     </ul>
 
     <h3 class="sub-header">HISTORY</h3>
@@ -110,13 +97,61 @@
                 <td>{{record.longUrl}}</td>
                 <td>{{record.click}}</td>
                 <td>
-                    <button type="submit" class="btn btn-success" ng-click="showContinentClick(record.shortUrl)">show stat</button>
+                    <button type="submit" class="btn btn-success" ng-click="showContinentClick(record.shortUrl)">Details</button>
                 </td>
             </tr>
 
             </tbody>
         </table>
+    </div>
+
+    <div id="singleUrlStat">
+        <h3 class="sub-header">DETAILS</h3>
+        <h4>{{selectedUrl}}</h4>
+
+        <div class="continentStat">
+            <div class="table-responsive">
+                <table class="table table-striped">
+
+                    <thead id="continentHead">
+                    </thead>
+
+                    <tbody>
+                        <tr ng-repeat="continent in continentList">
+                            <td>{{continent.name}}</td>
+                            <td>{{continent.click}}</td>
+                            <td>
+                                <button type="submit" class="btn btn-success" ng-click="showCountryClick(continent.name)">More</button>
+                            </td>
+                        </tr>
+                    </tbody>
+
+                    {{detailsMsg}}
+                </table>
+            </div>
         </div>
+
+        <canvas id="doughnut" class="chart chart-doughnut" chart-data="data" chart-labels="labels"></canvas>
+
+
+        <div class="countryStat">
+            <div class="table-responsive">
+                <table class="table table-striped">
+                    <thead id="countryHead">
+
+                    </thead>
+
+                    <tbody>
+                    <tr ng-repeat="country in countryList">
+                        <td>{{country.name}}</td>
+                        <td>{{country.click}}</td>
+                    </tr>
+                    </tbody>
+                </table>
+            </div>
+        </div>
+
+    </div>
 </div>
 
 
