--- a/squiz.it/client/app/index.html
+++ b/squiz.it/client/app/index.html
@@ -13,7 +13,6 @@
     <title>squiz.it</title>
 
     <!-- Script -->
-    <script src="../bower_components/angular/angular.js"></script>
     <script src="scripts/app.js"></script>
     <script src="scripts/controllers/shortenCtrl.js"></script>
     <script src="scripts/chart/Chart.js"></script>
@@ -88,23 +87,30 @@
         <div class="col-md-4">
             <h2>Giuseppe Lorusso</h2>
             <img src="images/peppo.jpg" class="img-rounded profile">
-            <h4>Frontend Developer</h4>
+            <h4>Developer</h4>
             <h4>Data Analyst</h4>
-            <p>Everybody calls him Peppo. So, Peppo is a bass player, football player and a juggler. He loves problem solving, music, beer and coffee. <br><br> <i>"We are a flash in time, but our impact is forever."</i></i></p>
+            <p>Everybody calls him Peppo. So, Peppo is a bass player, football player, juggler and coffee lover. In CS field, he loves write code and design logical and creative solutions to his problems. <br><br>
+                I love beer and problem solving. Sometimes, beer solves my problems :)<br><br>
+                <i>"We are a flash in time, but our impact is forever."</i></i></p>
         </div>
         <div class="col-md-4">
             <h2>Donato Mastropasqua</h2>
             <img src="images/donato.jpg" class="img-rounded profile" height="70%" width="70%">
-            <h4>Backend Developer</h4>
+            <h4>Data Engineer</h4>
             <h4>Software Engineer</h4>
-            <p>Coming soon...</p>
+            <p>In his free time, Donato never fails to follow the best sports world offers, from basketball to volleyball, from cycling to downhill skiing, although football is king: fan of Juventus FC.
+                <br><br>Expert in data modeling in fact its task is precisely to design the model and to communicate with the database server using all the knowledges made available dall'ingengeria software.
+                Expert in test design.
+                <br><br>
+                <i>"My greatest passion is sport"</i></p>
         </div>
         <div class="col-md-4">
             <h2>Corrado Giancaspro</h2>
             <img src="images/corrado.jpg" class="img-rounded profile" height="100%" width="100%">
-            <h4>Backend Developer</h4>
-            <h4>Data Engineer</h4>
-            <p>Coming soon...</p>
+            <h4>Platform Engineer</h4>
+            <h4>Software Engineer</h4>
+            <p>He's 24 but has more hobbies than a 15 yo boy. Two of theese are play football and talk with his friends.<br><br>
+               <i>"Nothing's forever"</i></p>
         </div>
     </div>
 
